--- a/TurbochargerController/MDK-ARM/TurbochargerController/TurbochargerController.build_log.htm
+++ b/TurbochargerController/MDK-ARM/TurbochargerController/TurbochargerController.build_log.htm
@@ -28,13 +28,15 @@ Project File Date:  05/01/2021
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\New Programs\Keil\ARM\ARMCC\Bin'
 Build target 'TurbochargerController'
 compiling main.c...
-../Core/Src/main.c(124): warning:  #177-D: variable "toSendBuffer"  was declared but never referenced
-  	uint8_t toSendBuffer[] = "Hello World. \r\n";
-../Core/Src/main.c: 1 warning, 0 errors
+../Core/Src/main.c(366): warning:  #177-D: function "MX_USART2_UART_Init"  was declared but never referenced
+  static void MX_USART2_UART_Init(void)
+../Core/Src/main.c(317): warning:  #177-D: function "MX_ADC1_Init"  was declared but never referenced
+  static void MX_ADC1_Init(void)
+../Core/Src/main.c: 2 warnings, 0 errors
 linking...
-Program Size: Code=6540 RO-data=500 RW-data=20 ZI-data=1252  
+Program Size: Code=4308 RO-data=492 RW-data=20 ZI-data=1028  
 FromELF: creating hex file...
-"TurbochargerController\TurbochargerController.axf" - 0 Error(s), 1 Warning(s).
+"TurbochargerController\TurbochargerController.axf" - 0 Error(s), 2 Warning(s).
 
 <h2>Software Packages used:</h2>
 
@@ -58,7 +60,7 @@ Package Vendor: Keil
 
    * Component: ARM::CMSIS:CORE:5.4.0
       Include file:  CMSIS\Core\Include\tz_context.h
-Build Time Elapsed:  00:00:05
+Build Time Elapsed:  00:00:03
 </pre>
 </body>
 </html>
