--- a/TurbochargerController/MDK-ARM/TurbochargerController/TurbochargerController.build_log.htm
+++ b/TurbochargerController/MDK-ARM/TurbochargerController/TurbochargerController.build_log.htm
@@ -28,15 +28,17 @@ Project File Date:  05/01/2021
 *** Using Compiler 'V5.06 update 7 (build 960)', folder: 'D:\New Programs\Keil\ARM\ARMCC\Bin'
 Build target 'TurbochargerController'
 compiling main.c...
-../Core/Src/main.c(420): warning:  #177-D: function "MX_USART2_UART_Init"  was declared but never referenced
+../Core/Src/main.c(344): warning:  #167-D: argument of type "volatile char *" is incompatible with parameter of type "char *"
+  		transmitString(int_to_string(desiredStep));
+../Core/Src/main.c(463): warning:  #177-D: function "MX_USART2_UART_Init"  was declared but never referenced
   static void MX_USART2_UART_Init(void)
-../Core/Src/main.c(371): warning:  #177-D: function "MX_ADC1_Init"  was declared but never referenced
+../Core/Src/main.c(414): warning:  #177-D: function "MX_ADC1_Init"  was declared but never referenced
   static void MX_ADC1_Init(void)
-../Core/Src/main.c: 2 warnings, 0 errors
+../Core/Src/main.c: 3 warnings, 0 errors
 linking...
-Program Size: Code=4452 RO-data=492 RW-data=48 ZI-data=1024  
+Program Size: Code=4796 RO-data=492 RW-data=44 ZI-data=1028  
 FromELF: creating hex file...
-"TurbochargerController\TurbochargerController.axf" - 0 Error(s), 2 Warning(s).
+"TurbochargerController\TurbochargerController.axf" - 0 Error(s), 3 Warning(s).
 
 <h2>Software Packages used:</h2>
 
