--- a/TurbochargerController/MDK-ARM/TurbochargerController/TurbochargerController.htm
+++ b/TurbochargerController/MDK-ARM/TurbochargerController/TurbochargerController.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [TurbochargerController\TurbochargerController.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image TurbochargerController\TurbochargerController.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Sun May 02 17:45:58 2021
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060960: Last Updated: Sun May 02 18:02:05 2021
 <BR><P>
 <H3>Maximum Stack Usage =        224 bytes + Unknown(Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -325,7 +325,7 @@ Global Symbols
 
 <P><STRONG><a name="[73]"></a>__scatterload_rt2</STRONG> (Thumb, 0 bytes, Stack size 0 bytes, init.o(.text), UNUSED)
 
-<P><STRONG><a name="[67]"></a>ADC_init</STRONG> (Thumb, 142 bytes, Stack size 0 bytes, main.o(i.ADC_init))
+<P><STRONG><a name="[66]"></a>ADC_init</STRONG> (Thumb, 142 bytes, Stack size 0 bytes, main.o(i.ADC_init))
 <BR><BR>[Called By]<UL><LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -441,7 +441,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[5f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemClock_Config
 </UL>
 
-<P><STRONG><a name="[66]"></a>HAL_RCC_GetHCLKFreq</STRONG> (Thumb, 6 bytes, Stack size 0 bytes, stm32l4xx_hal_rcc.o(i.HAL_RCC_GetHCLKFreq))
+<P><STRONG><a name="[65]"></a>HAL_RCC_GetHCLKFreq</STRONG> (Thumb, 6 bytes, Stack size 0 bytes, stm32l4xx_hal_rcc.o(i.HAL_RCC_GetHCLKFreq))
 <BR><BR>[Called By]<UL><LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
 
@@ -498,8 +498,10 @@ Global Symbols
 <P><STRONG><a name="[6]"></a>SVC_Handler</STRONG> (Thumb, 2 bytes, Stack size 0 bytes, stm32l4xx_it.o(i.SVC_Handler))
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32l412xx.o(RESET)
 </UL>
-<P><STRONG><a name="[9]"></a>SysTick_Handler</STRONG> (Thumb, 30 bytes, Stack size 0 bytes, stm32l4xx_it.o(i.SysTick_Handler))
-<BR><BR>[Calls]<UL><LI><a href="#[5e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_IncTick
+<P><STRONG><a name="[9]"></a>SysTick_Handler</STRONG> (Thumb, 84 bytes, Stack size 8 bytes, stm32l4xx_it.o(i.SysTick_Handler))
+<BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = SysTick_Handler
+</UL>
+<BR>[Calls]<UL><LI><a href="#[5e]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_IncTick
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32l412xx.o(RESET)
 </UL>
@@ -520,12 +522,11 @@ Global Symbols
 <P><STRONG><a name="[43]"></a>SystemInit</STRONG> (Thumb, 56 bytes, Stack size 0 bytes, system_stm32l4xx.o(i.SystemInit))
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32l412xx.o(.text)
 </UL>
-<P><STRONG><a name="[29]"></a>USART1_IRQHandler</STRONG> (Thumb, 156 bytes, Stack size 12 bytes, main.o(i.USART1_IRQHandler))
-<BR><BR>[Stack]<UL><LI>Max Depth = 20<LI>Call Chain = USART1_IRQHandler &rArr; transmitString
+<P><STRONG><a name="[29]"></a>USART1_IRQHandler</STRONG> (Thumb, 130 bytes, Stack size 12 bytes, main.o(i.USART1_IRQHandler))
+<BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = USART1_IRQHandler
 </UL>
-<BR>[Calls]<UL><LI><a href="#[64]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;transmitString
-<LI><a href="#[63]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;transmitChar
-<LI><a href="#[65]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;string_to_int
+<BR>[Calls]<UL><LI><a href="#[63]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;transmitChar
+<LI><a href="#[64]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;string_to_int
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32l412xx.o(RESET)
 </UL>
@@ -542,7 +543,7 @@ Global Symbols
 
 <P><STRONG><a name="[76]"></a>__scatterload_zeroinit</STRONG> (Thumb, 14 bytes, Stack size unknown bytes, handlers.o(i.__scatterload_zeroinit), UNUSED)
 
-<P><STRONG><a name="[68]"></a>int_to_string</STRONG> (Thumb, 54 bytes, Stack size 12 bytes, main.o(i.int_to_string))
+<P><STRONG><a name="[67]"></a>int_to_string</STRONG> (Thumb, 54 bytes, Stack size 12 bytes, main.o(i.int_to_string))
 <BR><BR>[Stack]<UL><LI>Max Depth = 12<LI>Call Chain = int_to_string
 </UL>
 <BR>[Called By]<UL><LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
@@ -551,33 +552,32 @@ Global Symbols
 <P><STRONG><a name="[42]"></a>main</STRONG> (Thumb, 184 bytes, Stack size 8 bytes, main.o(i.main))
 <BR><BR>[Stack]<UL><LI>Max Depth = 224<LI>Call Chain = main &rArr; SystemClock_Config &rArr; HAL_RCC_OscConfig &rArr; HAL_InitTick &rArr; HAL_NVIC_SetPriority
 </UL>
-<BR>[Calls]<UL><LI><a href="#[66]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_RCC_GetHCLKFreq
+<BR>[Calls]<UL><LI><a href="#[65]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_RCC_GetHCLKFreq
 <LI><a href="#[4d]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_Init
 <LI><a href="#[4b]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_Delay
-<LI><a href="#[64]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;transmitString
-<LI><a href="#[68]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;int_to_string
+<LI><a href="#[68]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;transmitString
+<LI><a href="#[67]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;int_to_string
 <LI><a href="#[5f]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;SystemClock_Config
-<LI><a href="#[67]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ADC_init
+<LI><a href="#[66]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;ADC_init
 <LI><a href="#[59]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;MX_GPIO_Init
 </UL>
 <BR>[Address Reference Count : 1]<UL><LI> entry9a.o(.ARM.Collect$$$$0000000B)
 </UL>
-<P><STRONG><a name="[65]"></a>string_to_int</STRONG> (Thumb, 28 bytes, Stack size 0 bytes, main.o(i.string_to_int))
+<P><STRONG><a name="[64]"></a>string_to_int</STRONG> (Thumb, 28 bytes, Stack size 0 bytes, main.o(i.string_to_int))
 <BR><BR>[Called By]<UL><LI><a href="#[29]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;USART1_IRQHandler
 </UL>
 
 <P><STRONG><a name="[63]"></a>transmitChar</STRONG> (Thumb, 16 bytes, Stack size 0 bytes, main.o(i.transmitChar))
-<BR><BR>[Called By]<UL><LI><a href="#[64]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;transmitString
+<BR><BR>[Called By]<UL><LI><a href="#[68]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;transmitString
 <LI><a href="#[29]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;USART1_IRQHandler
 </UL>
 
-<P><STRONG><a name="[64]"></a>transmitString</STRONG> (Thumb, 22 bytes, Stack size 8 bytes, main.o(i.transmitString))
+<P><STRONG><a name="[68]"></a>transmitString</STRONG> (Thumb, 22 bytes, Stack size 8 bytes, main.o(i.transmitString))
 <BR><BR>[Stack]<UL><LI>Max Depth = 8<LI>Call Chain = transmitString
 </UL>
 <BR>[Calls]<UL><LI><a href="#[63]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;transmitChar
 </UL>
 <BR>[Called By]<UL><LI><a href="#[42]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
-<LI><a href="#[29]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;USART1_IRQHandler
 </UL>
 <P>
 <H3>
